syntax = "proto3";

package content;

import "api/content/content.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/webbsalad/storya-content-backend/content;content";

service UserContentService {
    rpc GetUserItems(GetUserItemsRequest) returns (GetUserItemsResponse) {
        option (google.api.http) = {
            get: "/content/{content_type}/{user_id}"
        };
    };

    rpc GetValued(GetValuedRequest) returns (GetValuedResponse) {
        option (google.api.http) = {
            get: "/content/{content_type}/{user_id}/{value}"
        };
    };

    rpc Add(AddRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            patch: "/content/{content_type}",
            body: "*"
        };
    };

    rpc Remove(RemoveItemRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/content/{content_type}/{item_id}"
        };
    };
}


message GetUserItemsRequest {
    string user_id = 1 [(validate.rules).string.uuid = true];
    ContentType content_type = 2;
}

message GetUserItemsResponse {
    repeated UserItem userItems = 1;
}

message GetValuedRequest {
    string user_id = 1 [(validate.rules).string.uuid = true];
    ContentType content_type = 2;
    Value value = 3;
}

message GetValuedResponse {
    repeated Item items = 1;
}

message AddRequest {
    string item_id = 1 [(validate.rules).string.uuid = true];
    ContentType content_type = 2;
    Value value = 3;
}

message RemoveItemRequest {
    string item_id = 1 [(validate.rules).string.uuid = true];
    ContentType content_type = 2;

}